--- a/src/manifest.json
+++ b/src/manifest.json
@@ -10,7 +10,7 @@
     "persistent": false
   },
   "browser_action": {
-    "default_icon" : "icon.png",
+    "default_icon" : "src/img/google.png",
     "default_title": "Let's Google",
     "default_popup": "pop.html"
   }
